--- a/test/dateselector.html
+++ b/test/dateselector.html
@@ -21,6 +21,7 @@
 	<body>
 		<div id="qunit"></div>
 		<div id="qunit-fixture">
+			<input type="text" id="dateselector" />
 		</div>
 	</body>
 </html>
